# ShadeLine

./: CMakeLists.txt  Graph.cpp  Graph.hpp  Node.cpp  Node.hpp  ShaderNode.cpp  ShaderNode.h  Shader_Node.cpp  main.cpp  mytypes.hpp
GL/: GGL.h  Program.cpp  Program.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Window.cpp  Window.h
Nodes/: IntNode.cpp  IntNode.h  Node.hpp  ShaderNode.cpp  ShaderNode.h  TextureNode.cpp  TextureNode.h  node.cpp  node.hpp
cmake_modules/: FindGLFW.cmake
shaders/: blur.glsl  default_vertex.glsl  rgb_to_gray.glsl
